PRIM-2078 - INDO - Create mobile responsive summary dashboard - Fixing align colums on dashboard tables

--- a/app/assets/stylesheets/primero/dashboard.scss
+++ b/app/assets/stylesheets/primero/dashboard.scss
@@ -539,6 +539,21 @@ $dashboard_table_counts:85px;
   }
 }
 
+@media only screen and (max-width: 1023px){
+  #dashboard {
+    #content {
+      table.table-counts{
+        th:not(:first-child), td:not(:first-child) {
+          width: 50px !important;
+        }
+        th:first-child, td:first-child {
+          width: 80px !important;
+        }
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 639px) {
   .card-container {
     display: flex;
@@ -549,27 +564,20 @@ $dashboard_table_counts:85px;
       flex-shrink: 0;
     }
   }
-  /*Temporal hack to fix mobile responsive in table dasboards*/
-  table.table-counts {
-    width: auto;
-  }
+
   #sidebar{
     display: none;
   }
 
   ul.menu.simple.align-right.links {
     justify-content: flex-end;
-    display: inline-flex;
-    justify-content: flex-end;
     align-items: flex-end;
-
+    margin-bottom: 10px;
     li {
       flex: 1 1;
       flex-basis: 150px;
-      margin-left: 0px;
-      margin-right: 2.5px;
-      padding-right: 0px;
-      padding-left: 2.5px;
+      margin-left: 2.5px;
+      padding-right: 2.5px;
     }
   }
 }
@@ -577,15 +585,12 @@ $dashboard_table_counts:85px;
 @media only screen and (min-width: 640px) and (max-width: 1023px) {
   ul.menu.simple.align-right.links {
     justify-content: flex-end;
-    display: inline-flex;
-    justify-content: flex-end;
     align-items: flex-end;
 
     li {
       flex: 1 1;
       flex-basis: 150px;
-      margin-left: 0px;
-      margin-right: 5px;
+      margin-left: 5px;
       padding-right: 5px;
       padding-left: 5px;
     }
